@@ -4,13 +4,13 @@ Hash: SHA256
 DIST gcloud-golang-629ed086d82ad5d0ac3668e309b8785aaf54735b.tar.gz 144387 SHA256 bee11c31bc0f8914b4b72463033eb7432f28cec490673f4a12618b64868ee1f5 SHA512 33bdb3a9b3379bdd2502ade3ee9a41601effbd3f4bae88a7a7b4931866b73b336846b50994b254cac85571693566e12f4a23a0b8a0428d6aef1b301d468ef417 WHIRLPOOL 50426185042fe8b754b2db30b11fce588a189cb61e3e9781409edde6a5deb15a109ed1bf78e5831414762f497d3a6dcd98f2291f9c93b283059aa5b453ac9121
 DIST go-oauth2-0_pre20150527.tar.gz 32027 SHA256 eb1d48e29653b0bc68e41ef35df0d421e586e666ce52d7d504a6f2fb89807ce1 SHA512 9070bfed2e280286dbaeb360e77a9b2decf3e272e945ce4099875f7fd2e378b54082f8a9b4a2b7289d6984be4c66110d34b814cbc8e2850fd44122d484258fd4 WHIRLPOOL 09f19f1111f0a1d40ccff541c5cf4ad968264c91e9f6a3c18d23d441520002896b99f8f9979922dd4245edd9b46f89c46c94144b516c8424de43ccae8d462598
 EBUILD go-oauth2-0_pre20150527.ebuild 1992 SHA256 84cca12630367216d8feb080d19180b5d5d4a0f504081eacfa1141711920fafe SHA512 e325a6f0e18b206f685e02dd0fd0f2be596a2236b88f749c063eab4772d5a8546101148a2b29e6b2af0da7088a98b24a259728335f65011a6e57a11491ac4af1 WHIRLPOOL ac252cb16daedcd12c9d51a85db197edc37f494a94fe7b15a35707f1c8e47e65e947ef3a47fdf672f4614cd1a63fbaf8d5fd24f887f895d25b293891472b1aae
-EBUILD go-oauth2-9999.ebuild 1344 SHA256 e0c70ad5126322b47b343c87cf5f9a0bd37a8f1ad624a7c48d86781d7958b6cc SHA512 d520b2a82c3dcdcfda98ae368d57f270fee6b0337ba13dbfc628cb1a9917aacd9a2b76e4c7225c3ee8ca98c4707d99d429d9aa488397ee44bfa073aa46ccb539 WHIRLPOOL 636fe0ce76d1d74f26b346001bece53dd941132ccd7cf48fbbc38d8371a378d6f248c7543f31c0c79324ca7e8ceb7b8667994db5b227f92bee9f5ec97cfb4586
-MISC ChangeLog 1736 SHA256 7d49f0526c8ce6c4f02c968222a7edb0c559c621bbcbd8994032cfb6c8412fee SHA512 f9c3174fb2a363574a1b3fb2e89e59bbc3d6eb7806b76903de4090554bb5685d33be46c49c296bacaceb22f5aebd2aa0ea9677153aa2a5d25a062b29c745fdb5 WHIRLPOOL 474503ae47b16e449bdfbcca743c296e53daa006512df826199160bdf9fde2160d11a2299fba0885f80bd7a368652ccae29da7c175910a19879f4d033ab1034a
+EBUILD go-oauth2-9999.ebuild 739 SHA256 21dd43b4f77acfdadaaea7a8b8d27b18ad15bcf2b50ff504b03061ca0b87be07 SHA512 124f47cf17b6b295ceacf5a77252c7317bbf264d1eaad5d7fa1c8a5db9ddf6a8e060167d18426eb536aca45361820906f165554b4eef8d4046757b1f005c4e15 WHIRLPOOL 3e8a8cd54fdd279db74e64168ca28c808507db134819aafb1899274fa0e78586cd6b2e56363f2a0edb2cd88c86654d4f8a377833561d6ce4124d44df184a428d
+MISC ChangeLog 1864 SHA256 bb83fa913141c09a858164ca2c7d8f9655a3147bd8d10662a4eede45997946c6 SHA512 50ee08456d2dd3915c51ed8f618ec0f4278760ed0e80d672bb6ccda99b33298862f73b92000cd882c5d9d63a0143d4785df3f81ec6357a5e12f25e5a0d391a9c WHIRLPOOL 7156917b3fbeea763769fa28fa6175d9e15dbc783bf67ca881b8001b98c9df57fd8d09958242a3bdb75b46d3357596ae5313c361ac5647614f2caa0cb02b0111
 MISC metadata.xml 310 SHA256 e5b5d7641881b427bafe28de33692bea7795f2437a94166fb84bf4814fe1347d SHA512 7d85a3a39f3d15746f63b55a5e957525bef479b9ebe6c396d47539e9164367a041c40a40a56bf6a9281012538aeee5e5102ccebc4a012950a84b2c8d92f98fd7 WHIRLPOOL 6fa1989b1cebd12e2d4b834a329d2befc8c58bac407fe6644a0240839672939d1766843267dd2f774e9554a71af2fae23f6c9a6f84a291d3ed2171ec6f1fa1a6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlWdfRUACgkQblQW9DDEZTg5OQCfUFqUKm2gMcSejLktcD/H0Bh5
-MywAnRrmZEOL0qFmrdigbudu8vlvwiKF
-=RmXt
+iEYEAREIAAYFAlXCRZAACgkQblQW9DDEZTgq2gCgs2u/M48biY9EZLM2mjU92XwO
+X4UAn1QdOMfm+JHGKC6hRo4hE2E6JkEF
+=rkZx
 -----END PGP SIGNATURE-----
