@@ -1,5 +1,15 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST go-protobuf-0_pre20150727.tar.gz 151982 SHA256 160ad98eb1477492476ba566d218262fe6d326410d5a030c6a00433eaf7f9006 SHA512 04802b8d74ccaa17f9fc030badd0e74b6e47233ca5f1faab7c49f25bef2f06efd97aa4bf3f4783a7815958354744ddb9fee96d183aebbb03864069b0cc569564 WHIRLPOOL f49157a4a1a48c67b72ed38121ba28aec3f9b3405a3388097caba36643715c14b6915f9bcbd04f974fa98e9f2c4c4a4e313480ef307701c0ace734e9c214c010
 EBUILD go-protobuf-0_pre20150727.ebuild 1402 SHA256 f7fe780a13188535eee68c04eb71d981802577d94f347cc03327fec57240b47a SHA512 d52de4142be72c65d18614322091b13df4896c70dd8651ed3e90d87ac50b6822bc1cbc9295cf7d4b888683dda528650d1415977c890ae1cacb79a9320c0f2f8b WHIRLPOOL be9872484ff3d05f7a1694c8dca9a2042199611e7e6db665d127d9f3bfcac9432952c4a056c8e10b944229619895a5e20a181619ba8434343d35a6a4510962cc
-EBUILD go-protobuf-9999.ebuild 1393 SHA256 039a143c920f53ec431b0f56571687940764f7bf194521382a9374a851b618df SHA512 818683e05f2b865676d21ec81a2d3e098a9cf34346f0b8ee8c6a95ed63c7a72122c350a8666fd36b5bb51b45b8f9e13eda3a0bf1014814a342881974aee6e23d WHIRLPOOL 3fbbb331fc8127653d6f5a72c509b138af970a7f14be13d3024924023baf19c1973f88b16f21197e737d2808e35e0f2ac64fd66bfc8fa1664feed99b024329c2
-MISC ChangeLog 698 SHA256 da0249d99a6f2eb2027869e7bd867a1000a6c5abe5b6faa51958daff24e0b36f SHA512 cf05539e47aa4241d93f5253d937776915586a6a0e698a8433b7181ad3becef2c43c240d6a78ca88d3ec40a91cc9b75979edd879be541a072ac1cf6d2a3efd46 WHIRLPOOL df4658325a2556ba6032aa14cd84e4684195dd77aa787b474c6acaf71ba428b600bb2fda65356c7287284d88f7b76ca5942e982b10c5393e482a271654c77742
+EBUILD go-protobuf-9999.ebuild 753 SHA256 f386646d329a93bed3c1f40c6ce090f8bd1c9fe10d7eabc6e95067808f1a2c77 SHA512 0b941baff254c6f856c74402c6e9d29a9500649879292c3bfd7870aeaaf56e90aaaf00461074204333ed2de66f87c7a815528b44244fe7e055530fc89ed8259d WHIRLPOOL 810c562b4e2285f6f10625c6416ad4a95f2ed82856d83e911e2e80dedb8f1d722687184c1d35065bbbc734379a50d3014b3bf833dee031efec7824bf2a102d24
+MISC ChangeLog 829 SHA256 15c43513864c8ad14344ffb729febfbbc9182c98e0c33132194aaa969dcdb7d3 SHA512 07e1cbed6ea0e73e5eafdc09d80143bc155c3bfb269a3de580e5ed44b7499e8fb6a9e694a952d7280e6e0db5803a0786278dde4d5f461835cef758f90933f32e WHIRLPOOL d2d0f28b7d24139466a473efe099ec9bf8c1030131ffbedb28e5733f4cf6fa42f2867655d773efe463cf1e6933fd3cb1138e9ba814e536268d787fd176b6dc19
 MISC metadata.xml 292 SHA256 686a549cca315084f08005ba45954b1518d4f94ccca9456cb94ebd2045430315 SHA512 f0747b25f842fa77c8438ca1116b2f02433cde3d0188c3d1bbd3a761183d9f91986325c6ead0681092c0513555873d697480d30c5d825e1dee7ce4a6315026e0 WHIRLPOOL 3b1343b58008797d17ca24934da2b9b7e21cfad991c44279d91e3cb1091dcf320ccc18e4c7afffb1ba240a25018dfecee782ad1c2aaa260cda7f61d3bba0dbf3
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iEYEAREIAAYFAlXCRr4ACgkQblQW9DDEZThz+ACcCKZbgYC3j8TgeHivo+SW03WJ
+44UAn2vQYJ9umyB9SqCxWI/SLyNrhTZ8
+=KTpR
+-----END PGP SIGNATURE-----
