@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-go/go-protobuf/go-protobuf-9999.ebuild,v 1.3 2015/07/30 09:31:49 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-go/go-protobuf/go-protobuf-9999.ebuild,v 1.4 2015/08/05 17:24:07 williamh Exp $
 
 EAPI=5
 
@@ -13,6 +13,7 @@ else
 	KEYWORDS="~amd64"
 	EGIT_COMMIT="68c687dc49948540b356a6b47931c9be4fcd0245"
 	SRC_URI="https://${EGO_SRC}/archive/${EGIT_COMMIT}.tar.gz -> ${P}.tar.gz"
+	inherit golang-vcs-snapshot
 fi
 inherit golang-build
 
@@ -24,37 +25,7 @@ IUSE=""
 DEPEND=""
 RDEPEND=""
 
-if [[ ${PV} != *9999* ]]; then
-src_unpack() {
-	local f
-
-	for f in ${A}
-	do
-		case "${f}" in
-			*.tar|*.tar.gz|*.tar.bz2|*.tar.xz)
-				local destdir=${WORKDIR}/${P}/src/${EGO_SRC}
-
-				debug-print "${FUNCNAME}: unpacking ${f} to ${destdir}"
-
-				# XXX: check whether the directory structure inside is
-				# fine? i.e. if the tarball has actually a parent dir.
-				mkdir -p "${destdir}" || die
-				tar -C "${destdir}" -x --strip-components 1 \
-					-f "${DISTDIR}/${f}" || die
-				;;
-			*)
-				debug-print "${FUNCNAME}: falling back to unpack for ${f}"
-
-				# fall back to the default method
-				unpack "${f}"
-				;;
-		esac
-	done
-}
-fi
-
 src_install() {
-	rm -rf src/${EGO_SRC}/.git* || die
 	golang-build_src_install
 	dobin bin/*
 }
