@@ -25,12 +25,13 @@ DIST torque-4.2.9.tar.gz 6294022 SHA256 46f1f319683af6d3820e18cda69ce59113c9a5c1
 EBUILD torque-2.5.13.ebuild 7739 SHA256 a0dc10b8d9ddca69a4cb7c3332bacc40c507ae2811a88dccef057d490b6578ba SHA512 39f8682c0fcb9ca4c0801ae5eb208544f1adb4a654f9c6524f9122d2fd972b409a9c544878732895aeb7083dda2be5b3606497f431374a9e1ceffc30a8c7410c WHIRLPOOL 2af8ec693634eee2ed688298e8d6778d3cddc42018a7221773c7bd260c87287928a978c8cd27633ffbce83fe39fbaa1f835365c4e6aeea03591a140a530cc925
 EBUILD torque-4.1.7.ebuild 7389 SHA256 0869e937a7a43b76ff431cfd88e75b22e24cd69ba2310800981dc205e0515879 SHA512 9e799657b418178b3428b6927e3afe9f377ce8dfb7bc9c874659aaf86c62c4653380509f4d8561af3ead8ec69f91ce1285510025e50745bb16323eceb3e9a698 WHIRLPOOL 2719e29ec4a020d17e1d7ebd9af4cf97d36f63b5362c44b731477782a4045d09cbb2948515205066e8b14f4198f832a58f2acda234354175dabfb3ffb8ad6931
 EBUILD torque-4.2.9-r3.ebuild 7431 SHA256 4078503ae4ea7dba6e5dde2e61624c6eb3ac98dc37f69032b900f1a5611b2648 SHA512 d163f33e282d10015032827c3774e30fe9f3e15626909944241d12c151d30925d2234160d6031202d3c21abf8f7d0450410baa7db04cbf64a5ed41c87bf213c0 WHIRLPOOL 97bf72d7136aaa2df01d89e0e70bb9c534f8b22512756c97d5561b34a9bd67e6d0835af7c40e10b756e7617ad2a98b7dd217d5e5099466473c15cb2d6cf216d4
-MISC ChangeLog 31479 SHA256 2ab6599e0db76fe559a91ac950c1c63e491dbe12e71256dcfa489a454c17537f SHA512 a09a6dd6f19a97f1633b7ab8e7d4c591684c48f5f64615db6e9dcd8028ea004bc9d5ddaabf757056997ed6b567084813f995604043a268d5dc999ae34f1e66b5 WHIRLPOOL 7b3e3d276ed32e98ed327645fae11f6b4cf0b1164c14e5938fbf77ac65034d80a513a6b0694522918516fc64469ffb1f7bb1a4a8a02d935824f944f78c75768b
+EBUILD torque-4.2.9-r4.ebuild 5592 SHA256 b3b3906cfa12c2141dde70cf5bd47030db35b9356f6122787159ef22b44ce2bb SHA512 8927d9e2b61b33c3bb8292b940921c7ade7677aabf3f6288dc940a899508ecce6ce8697636ca5fd39f4cea92e688452be2e179b801ddbf7710c0defc6ca862b6 WHIRLPOOL 38cabad9a9fb98a5a0052606a7ee316fad1632b306199ffff9917167c6abe96152b67dca89f3dbe3eebd87638a195b4c7130747fa7fb29b7b6313e771558b770
+MISC ChangeLog 31718 SHA256 57869537747496582b93f6cd931694269a9e6a53e6d70e5f900fa01a40d69026 SHA512 5bbeea7bc32bbab8b74a3f74259d96a4f4897cb7ba22ce2750a5e05e3874377b1c4ad3ab6dcb9e0888339d9ef8456290383c75376704289aa8554cb762fd287c WHIRLPOOL 11acf1fe88d1eef1a484f000ac3b909d237f7d373759e15f588d5fb27a068364b7c146cd01b7f9e3a0c09270c3fd02203882376374a42847d687afd27b771991
 MISC metadata.xml 628 SHA256 10fab1886476e44fabbcda6e7dbbc8452d07cb0de0cefcf6e594312dfe89f7af SHA512 d1c78c4247f209eda60a61c9c611c4a4b87d52f85b112a78b96a4dee6f3cd660aef49547323074d69ffce8c1b916c3914f00282781e2f68f76658e6f9ac7ff9b WHIRLPOOL 243373e602f92a256118e6bee6c3071d5894caf3d53a663abee6929a310cf306b15a6a7bd2a0e76882cfe36cd4e8b6c06bb9e12f49f678d085883d61d4a84cf9
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlVCb2gACgkQ4MrvBE1wQ8kpTgCfeztsVxfSOLJCAgmBCCI5xKXD
-y5MAn1oJcTboQKemHuheQzGgVBx3Hnnd
-=Po03
+iEYEAREIAAYFAlXCRpkACgkQ4MrvBE1wQ8m+wQCeOVPVEszLjAow3sJqENTsoLzW
+Y3MAnRew8xfVgkLmtFs5swd+SDzGvxY4
+=MMeA
 -----END PGP SIGNATURE-----
