@@ -1,6 +1,9 @@
 # ChangeLog for dev-go/go-protobuf
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-go/go-protobuf/ChangeLog,v 1.3 2015/07/30 09:31:49 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-go/go-protobuf/ChangeLog,v 1.4 2015/08/05 17:24:07 williamh Exp $
+
+  05 Aug 2015; William Hubbs <williamh@gentoo.org> go-protobuf-9999.ebuild:
+  add support for golang-vcs-snapshot to live ebuild
 
   30 Jul 2015; Patrick Lauer <patrick@gentoo.org>
   go-protobuf-0_pre20150727.ebuild, go-protobuf-9999.ebuild:
