@@ -1,6 +1,9 @@
 # ChangeLog for dev-go/go-oauth2
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-go/go-oauth2/ChangeLog,v 1.10 2015/07/08 19:42:07 williamh Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-go/go-oauth2/ChangeLog,v 1.11 2015/08/05 17:19:04 williamh Exp $
+
+  05 Aug 2015; William Hubbs <williamh@gentoo.org> go-oauth2-9999.ebuild:
+  add support for golang-vcs-snapshot to live ebuild
 
   08 Jul 2015; William Hubbs <williamh@gentoo.org> go-oauth2-9999.ebuild:
   Add slot dependency for go-net
